# expense_tracker_roadmap_sh

./: README.md  compose.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: db_handler.rs  main.rs  utils.rs
backend/src/db_handler/: authentication.rs  expenses.rs  jwt.rs  types.rs
frontend/: Dockerfile  components.json  package-lock.json  package.json
frontend/src/: app.d.ts  hooks.server.js
frontend/src/lib/auth/: auth.ts
frontend/src/lib/components/ui/expense/: date-picker.svelte  date-range-picker.svelte  dropdown.svelte  expense-form.svelte  schema.ts
frontend/src/lib/components/ui/signin/: schema.ts  signin-form.svelte
frontend/src/lib/db/: getExpenses.ts  types.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/(app)/: +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
frontend/src/routes/(app)/dashboard/: +page.server.js  +page.svelte
frontend/src/routes/(app)/dashboard/(components)/: data-table-actions.svelte  data-table-checkbox.svelte  data-table.svelte  select-filter.svelte
frontend/src/routes/(app)/logout/: +server.js
frontend/src/routes/(register)/register/: +layout.svelte  +page.server.js  +page.svelte  register-form.svelte  schema.ts
frontend/src/routes/api/db/remove_expense/: +server.ts
frontend/src/routes/api/db/update_expense/: +server.ts
