[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = "0.12.1"
jwt = "0.16.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sha256 = "1.5.0"
surrealdb = "1.5.5"
thiserror = "1.0.63"
